# cpp-amalgamate

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: cli.rs  filter.rs  logger.rs  logging.rs  main.rs  process.rs  resolve.rs
tests/: filtering.rs  inlining.rs  misc.rs  resolving.rs
tests/common/: mod.rs
tests/integration/: filtering.rs  inlining.rs  main.rs  misc.rs  resolving.rs
