[package]
name = "cpp-amalgamate"
version = "0.1.0"
authors = ["David Stangl <david@david-stangl.com>"]
description = """
cpp-amalgamate recursively combines C++ source files and the headers they
include into a single output file. It tracks which headers have been included
and skips any further references to them. Which includes are inlined and which
are left as is can be precisely controlled.
"""
repository = "https://github.com/Felerius/cpp-amalgamate"
keywords = ["c++", "cpp", "amalgamation", "competitive-programming"]
categories = ["command-line-utilities", "development-tools"]
license = "MIT"
edition = "2021"
rust-version = "1.56"
resolver = "2"

[dependencies]
anyhow = "1.0.44"
clap = { version = "3.0.0-beta.5", features = ["wrap_help"] }
env_logger = "0.9.0"
globset = "0.4.8"
itertools = "0.10.1"
log = { version = "0.4.14", features = ["std"] }
regex = "1.5.4"

[dev-dependencies]
tempfile = "3.2.0"
