[package]
name = "cpp-amalgamate"
version = "1.0.1"
authors = ["David Stangl <david@david-stangl.com>"]
description = """
cpp-amalgamate recursively combines C++ source files and the headers they include into a single
output file.
"""
repository = "https://github.com/Felerius/cpp-amalgamate"
homepage = "https://github.com/Felerius/cpp-amalgamate"
documentation = "https://github.com/Felerius/cpp-amalgamate"
keywords = ["cpp", "amalgamation", "competitive", "programming"]
categories = ["command-line-utilities", "development-tools"]
license = "MIT"
edition = "2021"
rust-version = "1.56"
resolver = "2"

[dependencies]
anyhow = "1.0.57"
clap = { version = "3.1.18", features = ["derive", "wrap_help"] }
env_logger = "0.9.0"
globset = "0.4.8"
itertools = "0.10.3"
log = { version = "0.4.17", features = ["std"] }
regex = "1.5.6"

[dev-dependencies]
assert_cmd = "2.0.4"
assert_fs = "1.0.7"
indoc = "1.0.6"
once_cell = "1.12.0"
predicates = "2.1.1"
